feat: remove meta title and description from category
