# app/Models/Category.php
@@ -17,8 +17,6 @@ use Illuminate\Support\Facades\Config;
  * @property string $name
  * @property string $slug
  * @property string|null $image_url
- * @property string|null $meta_title
- * @property string|null $meta_description
  * @property int $display_order
  * @property int $views
  * @property int|null $parent_id
@@ -56,13 +54,5 @@ final class Category extends Model
     public function getImageUrl(): string
     {
         return $this->image_url ?? asset(Config::string('app.default_images.category'));
-    }
-
-    /**
-     * Get the meta title for the category.
-     */
-    public function getMetaTitle(): string
-    {
-        return $this->meta_title ?? $this->name;
     }
 }
